--- a/openssl-sys/Cargo.toml
+++ b/openssl-sys/Cargo.toml
@@ -12,6 +12,10 @@ categories = ["cryptography", "external-ffi-bindings"]
 links = "openssl"
 build = "build.rs"
 
+[features]
+default = []
+link-static = []
+
 [dependencies]
 libc = "0.2"
 
