--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "openssl-sys/openssl"]
 	path = openssl-sys/openssl
-	url = https://github.com/openssl/openssl
+	url = git@github.com:openssl/openssl
+	branch = OpenSSL_1_1_0-stable
